Set root font size in px - Fixes layout issues in IE11

--- a/common/app/assets/stylesheets/base/_type.scss
+++ b/common/app/assets/stylesheets/base/_type.scss
@@ -7,8 +7,16 @@
 
 html {
     font-family: $serif;
-    font-size: 62.5%; // Set baseline font size to 10px
-                      // This is used as a baseline for rem (root ems) values
+
+    // font-size: 62.5%; // Set baseline font size to 10px
+    //                   // This is used as a baseline for rem (root ems) values
+
+    // @Kaelig on 05/02/2014:
+    // IE11 appears to have maths issues and sets the root font size to 9.93px
+    // instead of 10px. This has deep layout implications.
+    // Reverting to a px value until we find a fix for IE11,
+    // which means we are discarding any text size user preference.
+    font-size: 10px;
 }
 body {
     color: #545454;
